--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,14 @@
           </execution>
         </executions>
       </plugin>
+       <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          <configuration>
+              <testFailureIgnore>true</testFailureIgnore>
+          </configuration>
+      </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
